# bentobox

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  flake.nix  plan.md  test.sh
app/bentoctl/: Cargo.toml
app/bentoctl/src/: config.rs  lib.rs  profile.rs  ssh.rs
app/bentoctl/src/commands/: create.rs  create_raw.rs  credentials.rs  default_machine.rs  delete.rs  edit.rs  exec.rs  images.rs  inspect.rs  list.rs  logs.rs  machine_view.rs  mod.rs  network.rs  output.rs  profile.rs  restart.rs  rm.rs  rootfs_image.rs  run.rs  secret.rs  set.rs  shell.rs  shell_proxy.rs  show.rs  start.rs  status.rs  stop.rs
crates/bento-fc/: Cargo.toml  README.md
crates/bento-fc/spec/: README.md
crates/bento-fc/src/: client.rs  connection.rs  error.rs  lib.rs  process.rs  serial.rs  vm.rs  vsock.rs
crates/bento-guestd/: Cargo.toml
crates/bento-guestd/src/: config.rs  dns.rs  forward.rs  init.rs  main.rs  port.rs  port_forward.rs  rpc.rs  server.rs  services.rs  system_info.rs
crates/bento-guestd/src/host/: mod.rs
crates/bento-instanced/: Cargo.toml
crates/bento-instanced/scripts/: guest-bootstrap.sh
crates/bento-instanced/scripts/tasks/: 00-reconcile-mounts.sh
crates/bento-instanced/src/: agent.rs  async_fd.rs  background.rs  bootstrap.rs  context.rs  control.rs  daemon.rs  discovery.rs  endpoints.rs  events.rs  guest.rs  guest_control.rs  host_export.rs  instance_control_service.rs  launcher.rs  lib.rs  machine.rs  main.rs  monitor_config.rs  pid_guard.rs  port_forward.rs  runtime.rs  serial.rs  server.rs  service_config.rs  services.rs  shutdown.rs  socket.rs  startup.rs  startup_reporter.rs  state.rs  tunnel.rs
crates/bento-instanced/src/net/: listener.rs
crates/bento-libvm/: Cargo.toml
crates/bento-libvm/scripts/: guest-install.sh
crates/bento-libvm/scripts/tasks/: 10-register-guestd.sh
crates/bento-libvm/src/: engine.rs  error.rs  global_config.rs  launch.rs  layout.rs  lib.rs  machine_ref.rs  monitor.rs  profiles.rs  ssh_keys.rs  state.rs
crates/bento-machine/: Cargo.toml
crates/bento-machine/src/: lib.rs  machine.rs  registry.rs  stream.rs  types.rs
crates/bento-machine/src/backend/: firecracker.rs  mod.rs  vz.rs
crates/bento-migrate-daemonless/: Cargo.toml
crates/bento-migrate-daemonless/src/: main.rs
crates/bento-protocol/: Cargo.toml  build.rs
crates/bento-protocol/proto/: agent.proto  common.proto  instance_control.proto  vm_monitor.proto
crates/bento-protocol/src/: control.rs  guest.rs  lib.rs  services.rs
crates/bento-runtime/: Cargo.toml
crates/bento-runtime/scripts/: guest-bootstrap.sh  guest-install.sh
crates/bento-runtime/src/: capabilities.rs  cidata.rs  cidata_iso9660.rs  directories.rs  extensions.rs  global_config.rs  instance.rs  instance_control.rs  instance_daemon.rs  instance_manager.rs  instance_store.rs  lib.rs  log_watcher.rs  machine.rs  negotiate.rs  profiles.rs  service_readiness.rs  services.rs  ssh_keys.rs  utils.rs
crates/bento-runtime/src/config/: mod.rs
crates/bento-runtime/src/driver/: firecracker.rs  mod.rs
crates/bento-runtime/src/images/: capabilities.rs  features.rs  metadata.rs  mod.rs  store.rs
crates/bento-vmm/: Cargo.toml
crates/bento-vmm/src/: lib.rs  machine.rs  stream.rs  types.rs
crates/bento-vmm/src/backend/: cloud_hypervisor.rs  firecracker.rs  mod.rs  vz.rs
crates/bentoctl/: Cargo.toml
crates/bentoctl/src/: daemon_control.rs  main.rs  service_readiness.rs  ssh.rs  terminal.rs
crates/bentoctl/src/commands/: create.rs  create_raw.rs  delete.rs  exec.rs  images.rs  instanced.rs  list.rs  mod.rs  run.rs  shell.rs  shell_proxy.rs  start.rs  status.rs  stop.rs
guest/bento-agent/: Cargo.toml  README.md
guest/bento-agent/src/: config.rs  forward.rs  main.rs  port.rs  rpc.rs
guest/bento-agent/src/host/: info.rs
guest/bento-agent/src/provision/: ca.rs  mod.rs  mounts.rs  networkd.rs  resize.rs  rosetta.rs  ssh.rs  user.rs  userdata.rs
runtime/bento-libvm/: Cargo.toml  README.md
runtime/bento-libvm/migrations/: 0001_initial.sql  0002_machine_runtime.sql
runtime/bento-libvm/scripts/: guest-bootstrap.sh  guest-install.sh
runtime/bento-libvm/scripts/tasks/: 10-register-agent.sh  20-setup-rosetta.sh
runtime/bento-libvm/src/: engine.rs  error.rs  global_config.rs  guest_agent.rs  instance_file.rs  launch.rs  layout.rs  lib.rs  lock_manager.rs  machine_id.rs  machine_ref.rs  models.rs  monitor.rs  network.rs  network_policy.rs  root_disk.rs  state.rs  utils.rs  vm_lock.rs
runtime/bento-libvm/src/host/: mod.rs
runtime/bento-libvm/src/images/: metadata.rs  store.rs
runtime/bento-libvm/src/machine/: builder.rs  config.rs  create.rs  handle.rs  inspect.rs  memory.rs  mod.rs  reference.rs  root_disk.rs  start.rs  status.rs  update.rs
runtime/bento-libvm/src/models/: machine.rs
runtime/bento-libvm/src/network/: api.rs  builder.rs  core.rs  mod.rs  netd_driver.rs  vznat_driver.rs
runtime/bento-libvm/src/paths/: defaults.rs  (+3 more)
runtime/bento-plugins/: Cargo.toml
runtime/bento-plugins/src/: lib.rs
runtime/bento-vmmon/: Cargo.toml
runtime/bento-vmmon/scripts/: sign-vmmon
runtime/bento-vmmon/src/: agent.rs  context.rs  endpoints.rs  exit_command.rs  ext.rs  machine.rs  main.rs  services.rs  shutdown.rs  startup.rs  state.rs
runtime/ocidisk/: Cargo.toml
runtime/ocidisk/src/: error.rs  lib.rs  lock.rs  progress.rs  registry.rs  store.rs
virt/bento-fc/: Cargo.toml  README.md  build.rs
virt/bento-fc/spec/: README.md  convert_openapi.py  firecracker-openapi.yaml
virt/bento-fc/src/: builder.rs  error.rs
virt/bento-krun/: Cargo.toml  README.md  build.rs
virt/bento-krun/src/: builder.rs  config.rs  error.rs  lib.rs  vm.rs
virt/bento-virt/: Cargo.toml  README.md
virt/bento-virt/src/: lib.rs  machine.rs  stream.rs  types.rs
virt/bento-vmm/: Cargo.toml
virt/bento-vmm/src/: lib.rs  machine.rs  serial.rs  stream.rs  types.rs
virt/bento-vz/: Cargo.toml  README.md
virt/bento-vz/src/: lib.rs  vm.rs
wire/bento-protocol/: Cargo.toml  build.rs
wire/bento-protocol/proto/: agent.proto  common.proto  vm_monitor.proto
wire/bento-protocol/src/: lib.rs
(+326 files in other folders)
