[workspace]
members = [
    "app/bentoctl",
    "common/bento-core",
    "guest/bento-agent",
    "runtime/bento-libvm",
    "runtime/bento-plugins",
    "runtime/bento-vmmon",
    "virt/bento-ch",
    "virt/bento-fc",
    "virt/bento-vmm",
    "virt/bento-vz",
    "wire/bento-protocol",
]
default-members = ["app/bentoctl", "runtime/bento-vmmon"]
resolver = "2"
