[workspace]
members = [
    "app/bentoctl",
    "common/bento-core",
    "common/bento-utils",
    "guest/bento-agent",
    "runtime/bento-libvm",
    "runtime/bento-plugins",
    "runtime/bento-vmmon",
    "virt/bento-fc",
    "virt/bento-krun",
    "virt/bento-krun-sys",
    "virt/bento-virt",
    "virt/bento-vz",
    "wire/bento-protocol",
]
default-members = ["app/bentoctl", "runtime/bento-vmmon"]
resolver = "2"
