[package]
name = "bento-fc"
version = "0.1.0"
edition = "2021"

[build-dependencies]
openapiv3 = "2.2.0"
prettyplease = "0.2.37"
progenitor = "0.13.0"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
syn = "2.0.106"

[dependencies]
nix = { version = "0.31.1", features = ["fs", "process", "signal", "socket"] }
progenitor-client = "0.13.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["io-util", "net", "sync", "time"] }
