[package]
name = "bento-guestd"
version = "0.1.0"
edition = "2021"

[dependencies]
bento-protocol = { path = "../bento-protocol" }
eyre = "0.6.12"
futures = "0.3.31"
rand = "0.9.2"
tarpc = { version = "0.37.0", features = ["serde-transport-bincode"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "io-util", "net", "time"] }
tokio-vsock = "0.7.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
