[package]
name = "bento-guestd"
version = "0.1.0"
edition = "2021"

[dependencies]
bento-core = { path = "../bento-core" }
bento-protocol = { path = "../bento-protocol" }
eyre = "0.6.12"
futures = "0.3.31"
hickory-proto = "0.24.4"
nix = { version = "0.31.1", features = ["feature", "hostname", "net"] }
rand = "0.9.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml_ng = "0.10.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "io-util", "net", "time", "sync"] }
tokio-util = "0.7.16"
tokio-vsock = "0.7.2"
tonic = { version = "0.12.3", features = ["transport"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
futures-util = "0.3.31"
netlink-packet-route = "0.19.0"
rtnetlink = "0.14.1"
