[package]
name = "bento-instanced"
version = "0.1.0"
edition = "2021"

[dependencies]
bento-machine = { path = "../bento-machine" }
bento-protocol = { path = "../bento-protocol" }
bento-runtime = { path = "../bento-runtime" }
eyre = "0.6.12"
futures = "0.3.31"
hyper-util = { version = "0.1.20", features = ["tokio"] }
libc = "0.2.180"
nix = { version = "0.31.1", features = ["signal", "fs", "socket"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml_ng = "0.10.0"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "net", "io-util", "time", "signal", "sync", "fs"] }
tonic = { version = "0.12.3", features = ["transport"] }
tower = "0.5.2"
thiserror = "2.0.18"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
