[package]
name = "bento-libvm"
version = "0.1.0"
edition = "2021"

[dependencies]
bento-core = { path = "../bento-core" }
nix = { version = "0.31.1", features = ["process", "signal", "fs"] }
redb = "4.0.0"
serde_yaml_ng = "0.10.0"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["time", "fs", "rt"] }

[dev-dependencies]
tempfile = "3.24.0"
