[package]
name = "bento-libvm"
version = "0.1.0"
edition = "2021"

[dependencies]
bento-protocol = { path = "../bento-protocol" }
bento-core = { path = "../bento-core" }
bento-runtime = { path = "../bento-runtime" }
hyper-util = "0.1.17"
nix = { version = "0.31.1", features = ["process", "signal", "fs"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde_yaml_ng = "0.10.0"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["time", "fs", "rt", "net", "io-util", "sync"] }
tonic = { version = "0.12.3", features = ["transport"] }
tower = "0.5.2"

[dev-dependencies]
tempfile = "3.24.0"
