[package]
name = "bento-machine"
version = "0.1.0"
edition = "2021"

[dependencies]
bento-protocol = { path = "../bento-protocol" }
crossbeam = "0.8.4"
nix = { version = "0.31.1", features = ["fs", "process", "signal", "socket"] }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["rt", "io-util", "net", "sync"] }
tracing = "0.1.41"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.0"
objc2 = { version = "0.6.0", features = ["catch-all", "exception"] }
objc2-foundation = { version = "0.3.0", features = ["NSArray", "NSData", "NSDictionary", "NSError", "NSFileHandle", "NSObject", "NSProcessInfo", "NSString", "NSURL"] }
objc2-virtualization = { version = "0.3.0", features = ["default"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt", "sync"] }
