[package]
name = "bento-migrate-daemonless"
version = "0.1.0"
edition = "2021"

[dependencies]
bento-core = { path = "../bento-core" }
bento-libvm = { path = "../bento-libvm" }
bento-runtime = { path = "../bento-runtime" }
clap = { version = "4.5.31", features = ["derive"] }
eyre = "0.6.12"
nix = { version = "0.31.1", features = ["signal"] }
serde_yaml_ng = "0.10.0"
thiserror = "2.0.18"
