[package]
name = "bento-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.5"
serde = { version = "1.0.217", features = ["derive"] }
tarpc = { version = "0.37.0", features = ["serde-transport-bincode"] }
tonic = { version = "0.12.3", features = ["transport"] }

[build-dependencies]
protoc-bin-vendored = "3.1.0"
prost-build = "0.13.5"
tonic-build = "0.12.3"

[dev-dependencies]
serde_json = "1.0.149"
