[package]
name = "bento-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
block2 = "0.6.0"
chrono = "0.4.43"
crossbeam = "0.8.4"
eyre = "0.6.12"
libc = "0.2.180"
nix = { version = "0.31.1", features = ["signal"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"
signal-hook = "0.4.3"
thiserror = "2.0.18"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.0", features = ["catch-all", "exception"] }
objc2-foundation = { version = "0.3.0", features = ["NSArray", "NSError", "NSFileHandle", "NSString", "NSURL"] }
objc2-virtualization = { version = "0.3.0", features = ["default"] }
