[package]
name = "bentoctl"
version = "0.1.0"
edition = "2021"
default-run = "bentoctl"

[dependencies]
anyhow = "1.0.89"
bento-instanced = { path = "../bento-instanced" }
bento-runtime = { path = "../bento-runtime" }
clap = { version = "4.5.31", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"
libc = "0.2.169"
time = { version = "0.3.36", features = ["formatting"] }
chrono = "0.4.43"
eyre = "0.6.12"
nix = { version = "0.31.1", features = ["fs"] }
tabwriter = "1.4.1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "net", "io-util", "time", "io-std"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }

[dev-dependencies]
tempfile = "3.24.0"
