[package]
name = "bento-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
bento-core = { path = "../../common/bento-core" }
bento-protocol = { path = "../../wire/bento-protocol" }
eyre = "0.6.12"
futures = "0.3.31"
hickory-proto = "0.24.4"
nix = { version = "0.31.1", features = ["feature", "hostname", "net"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml_ng = "0.10.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "io-util", "net", "time", "sync"] }
tokio-util = "0.7.16"
tokio-vsock = "0.7.2"
tonic = { version = "0.12.3", features = ["transport"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
futures-util = "0.3.31"
netlink-packet-route = "0.19.0"
rtnetlink = "0.14.1"
