[package]
name = "bento-libvm"
version = "0.1.0"
edition = "2021"

[dependencies]
bento-protocol = { path = "../../wire/bento-protocol" }
bento-core = { path = "../../common/bento-core" }
bento-utils = { path = "../../common/bento-utils" }
chrono = "0.4.43"
eyre = "0.6.12"
fatfs = "0.3.6"
flate2 = "1.1.5"
getrandom = "0.3.4"
hyper-util = "0.1.17"
libc = "0.2.180"
oci-client = "0.16.0"
oci-spec = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
nix = { version = "0.31.1", features = ["process", "signal", "fs"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde_yaml_ng = "0.10.0"
ssh-key = { version = "0.7.0-rc.8", default-features = false, features = ["ed25519", "std"] }
tar = "0.4.44"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["time", "fs", "rt", "net", "io-util", "sync"] }
tonic = { version = "0.12.3", features = ["transport"] }
tower = "0.5.2"
zstd = "0.13.3"

[dev-dependencies]
tempfile = "3.24.0"
