[package]
name = "bento-plugins"
version = "0.1.0"
edition = "2021"

[dependencies]
bento-core = { path = "../../common/bento-core" }
bytes = "1.10.1"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.18", features = ["tokio"] }
libc = "0.2.180"
nix = { version = "0.31.1", features = ["socket", "uio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "io-util", "net", "sync"] }
tracing = "0.1.41"
