[package]
name = "bento-vmmon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vmmon"
path = "src/main.rs"

[dependencies]
bento-core = { path = "../../common/bento-core" }
bento-virt = { path = "../../virt/bento-virt" }
bento-protocol = { path = "../../wire/bento-protocol" }
bento-utils = { path = "../../common/bento-utils" }
clap = { version = "4.5.31", features = ["derive"] }
eyre = "0.6.12"
futures = "0.3.31"
hyper-util = { version = "0.1.20", features = ["tokio"] }
libc = "0.2.180"
nix = { version = "0.31.1", features = ["signal", "fs", "socket", "process", "uio"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "net", "io-util", "time", "signal", "sync", "fs", "process"] }
tokio-util = "0.7.16"
tonic = { version = "0.12.3", features = ["transport"] }
tower = "0.5.2"
thiserror = "2.0.18"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
