[package]
name = "bento-vmmon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vmmon"
path = "src/main.rs"

[dependencies]
bento-core = { path = "../../common/bento-core" }
bento-virt = { path = "../../virt/bento-virt" }
bento-protocol = { path = "../../wire/bento-protocol" }
bento-utils = { path = "../../common/bento-utils" }
clap = { version = "4.6.1", features = ["derive"] }
eyre = "0.6.12"
futures = "0.3.32"
hyper-util = { version = "0.1.20", features = ["tokio"] }
libc = "0.2.186"
nix = { version = "0.31.3", features = ["signal", "fs", "socket", "process", "uio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "net", "io-util", "time", "signal", "sync", "fs", "process"] }
tokio-util = "0.7.18"
tonic = { version = "0.14.6", features = ["transport"] }
tower = "0.5.3"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
