[package]
name = "bento-krun"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "krun"
path = "src/bin/krun.rs"
required-features = ["krun-bin"]

[features]
krun-bin = ["dep:bento-krun-sys"]

[dependencies]
bento-utils = { path = "../../common/bento-utils" }
bento-krun-sys = { path = "../bento-krun-sys", optional = true }
clap = { version = "4.5.31", features = ["derive"] }
eyre = "0.6.12"
nix = { version = "0.31.1", features = ["socket", "term"] }
thiserror = "2.0.18"
tracing = "0.1.41"
