[package]
name = "bento-virt"
version = "0.1.0"
edition = "2021"

[dependencies]
bento-protocol = { path = "../../wire/bento-protocol" }
crossbeam = "0.8.4"
nix = { version = "0.31.1", features = ["fs", "process", "signal", "socket", "term"] }
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["rt", "fs", "io-util", "net", "process", "sync", "time"] }
tracing = "0.1.41"

[target.'cfg(target_os = "macos")'.dependencies]
bento-vz = { path = "../bento-vz" }

[target.'cfg(target_os = "linux")'.dependencies]
bento-krun = { path = "../bento-krun" }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt", "sync"] }
